Make Git repository up to date with 1.1

--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -1,4 +1,5 @@
-.basa-selectall {
+.basa-selectall,
+#wpbody .striped > tbody .basa-selectall {
 	display: none;
 	text-align: center;
 	background: #FFFFE0;
